fix(live-party): various bugs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 @import 'react-toastify/dist/ReactToastify.css';
-@import 'react-inner-image-zoom/lib/InnerImageZoom/styles.min.css';
+@import 'react-datepicker/dist/react-datepicker.css';
